# Moss

./: .env.example  .gitignore  README.md  delete.md  eslint.config.mjs  package-lock.json  package.json  render.yaml
app/: layout.tsx  page.tsx
app/api/texlive/[engine]/[...path]/: route.ts
app/auth/: page.tsx
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
components/: equation-editor.tsx  latex-visual-editor.tsx  moss-app.tsx  pdf-preview.tsx
components/ui/: dropdown-menu.tsx
docs/: moss-project-history-and-research.md
lib/: compiler-console.ts  compiler.ts  file-utils.ts  latex-lint.ts  latex-repair.ts  latex-visual.ts  moss-sample.ts  remote-compiler.ts  sections.ts  supabase.ts  swiftlatex-compiler.ts  types.ts
public/swiftlatex/: moss-pdftex-worker.js
public/texlive/pdftex/: manifest.json
supabase/migrations/: 20260507092606_create_moss_core_schema.sql  20260507094000_harden_moss_schema_advisor_findings.sql  20260515132500_add_storage_provider_metadata.sql  20260518000000_strengthen_sections_for_agents.sql
types/: citation-js.d.ts  mathlive-jsx.d.ts
